<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.apphamief.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_nim"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/nim"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FCFF7C"
        android:textColor="#ffffff"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FCFF7C"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>