<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apphamief.MainActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#123456"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="178dp"
        android:layout_height="204dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Haemief!"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:gravity="center" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_nim"
            android:layout_width="286dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="@string/nim"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="286dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FCFF7C"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FCFF7C"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>
