<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Collapsingtoolbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#123456"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Theme.Collapsingtoolbar"
            app:contentScrim="#123456"
            app:expandedTitleTextAppearance="@style/Theme.Collapsingtoolbar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_rounded"
                    android:text="Jadwal"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textAlignment="center"/>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_rounded_white"
                    android:text="Absensi"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Senin"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/shape"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/senin"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.733"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="156dp"
                android:text="Selasa"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:background="@drawable/shape"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/selasa"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="284dp"
                android:text="Rabu"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:background="@drawable/shape"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/rabu"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="416dp"
                android:text="Kamis"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:background="@drawable/shape"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/kamis"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="548dp"
                android:text="Jumat"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:background="@drawable/shape"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/jumat"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>